--- a/front.css
+++ b/front.css
@@ -1,9 +1,10 @@
 @media screen and (max-width:550px){
     body{
+        
         width:100%;
         border-right-color:1px solid rgb(150, 111, 60);
         
-        margin:0;
+        margin-top:-70px;
         background-color:rgb(227, 243, 230);
     }
     #p1{
@@ -28,6 +29,9 @@
         font-size:18;
         color:rgb(82, 107, 129);
         position:absolute;
+    }
+    #p1,ban_img{
+        position:relative;
     }
     p{
         font-size:1.1rem;
@@ -254,6 +258,7 @@
         background-color: rgb(209, 211, 211);
         padding:12px;
         margin-top:15px;
+        
     }
 
 }
